Fixed stars z-index overlapping modals

--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -92,7 +92,6 @@ h2, h3, .header {
 .stars__outer {
   display: inline-block;
   position: relative;
-  z-index: 10;
   /* font-family: 'FontAwesome', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
 }
 
